--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "truffle": "^4.1.5"
   },
   "scripts": {
-    "start": "truffle develop",
     "migrate": "truffle migrate --reset",
     "test" : "truffle test",
     "coverage" : "solidity-coverage",
-    "compile" : "truffle compile"
+    "compile" : "truffle compile",
+    "truffle" : "truffle"
   },
   "repository": {
     "type": "git",
