--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
   },
   "dependencies": {
     "npm": "^5.8.0",
+    "webpack": "^4.5.0",
     "zeppelin-solidity": "^1.8.0"
   },
   "devDependencies": {
     "solidity-coverage": "^0.4.15",
-    "truffle": "^4.1.5"
+    "truffle": "^4.1.6"
   },
   "scripts": {
     "migrate": "truffle migrate --reset",
-    "test" : "truffle test",
-    "coverage" : "solidity-coverage",
-    "compile" : "truffle compile",
-    "truffle" : "truffle"
+    "test": "truffle test",
+    "coverage": "solidity-coverage",
+    "compile": "truffle compile",
+    "truffle": "truffle"
   },
   "repository": {
     "type": "git",
