--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "zeppelin-solidity": "^1.9.0"
   },
   "devDependencies": {
+    "express": "^4.16.3",
     "truffle": "^4.1.8"
   },
   "scripts": {
