--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "test": "test"
   },
   "dependencies": {
-    "openzeppelin-solidity": "^1.9.0"
+    "openzeppelin-solidity": "^1.11.0"
   },
   "devDependencies": {
-    "express": "^4.16.3",
-    "truffle": "^4.1.8"
+    "truffle": "^4.1.13",
+    "truffle-hdwallet-provider": "0.0.5"
   },
   "scripts": {
     "migrate": "truffle migrate --reset",
     "test": "truffle test",
     "compile": "truffle compile",
-    "truffle": "truffle"
+    "truffle": "truffle",
+    "debug": "node inspect --port=9229 node_modules/truffle/build/cli.bundled.js test"
   },
   "repository": {
     "type": "git",
