--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "husky": "^1.0.0-rc.13",
     "truffle": "^4.1.13",
-    "truffle-hdwallet-provider": "0.0.5"
+    "truffle-hdwallet-provider": "0.0.5",
+    "bignumber.js": "git+https://github.com/frozeman/bignumber.js-nolookahead.git"
   },
   "scripts": {
     "migrate": "truffle migrate --reset",
@@ -37,10 +38,9 @@
     "url": "https://github.com/hdoordt/divisionsCore/issues"
   },
   "homepage": "https://divisions.com/",
-  
   "husky": {
     "hooks": {
-      "pre-push": "truffle test"
+      "pre-commit": "bash scripts/pre-commit-check.sh"
     }
   }
 }
